# Erbi

./: .gitignore  LICENSE  README.md  architecture.puml  docker-compose.yml
src/erbi_base/: CMakeLists.txt  Dockerfile  README.md  action.yml  package.xml  setup.cfg  setup.py
src/erbi_board/: Dockerfile  LICENSE  README.md
src/erbi_board/erbi_board/: CMakeLists.txt  package.xml
src/erbi_board/erbi_board/rosinstall/: webgui.rosinstall
src/erbi_board/erbi_rviz/: CMakeLists.txt  package.xml
src/erbi_board/erbi_rviz/launch/: rviz.launch.py
src/erbi_board/erbi_rviz/rviz/: realsense.rviz
src/erbi_cv/: Dockerfile  README.md  action.yml
src/erbi_cv/erbi_cv/: alive_subscriber.py
src/erbi_interfaces/: CMakeLists.txt  Dockerfile  Readme.md  package.xml
src/erbi_interfaces/msg/: Conversation.msg
src/erbi_nlp/: Dockerfile  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/erbi_nlp/erbi_nlp/: chatbot.py  chatbot_service.py  train.py
src/erbi_nlp/erbi_nlp/transformer/: dataset.py  model.py
src/erbi_nlp/utility/chatbot/runs/save_model/: keras_metadata.pb
src/erbi_nlp/utility/chatbot/runs/save_model/variables/: variables.index
src/erbi_simulation/: Dockerfile  package.xml  setup.cfg  setup.py
src/erbi_simulation/erbi_simulation/: alive_publisher.py
